--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion build_versions.target_sdk
     defaultConfig {
         applicationId "com.example.mi_post"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion  build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -61,9 +61,11 @@ dependencies {
     implementation deps.retrofit.coroutines_adapter
 
     implementation deps.dagger.dagger
-    annotationProcessor deps.dagger.dagger_compiler
+    kapt deps.dagger.dagger_compiler
     implementation deps.dagger.android_support
-    annotationProcessor deps.dagger.android_processor
+    kapt deps.dagger.android_processor
+
+    implementation deps.moshi.moshi
 
     implementation deps.room.runtime
     kapt deps.room.compiler
