--- a/versions.gradle
+++ b/versions.gradle
@@ -12,6 +12,7 @@ versions.espresso = "3.0.1"
 versions.mockk = "1.9"
 versions.dagger = "2.15"
 versions.retrofit = "2.5.0"
+versions.moshi = "1.8.0"
 versions.coroutines_adapter = "0.9.2"
 versions.support_test = "1.0.1"
 versions.design = "1.0.0-rc01"
@@ -44,6 +45,10 @@ def retrofit = [:]
 retrofit.retrofit = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 retrofit.coroutines_adapter = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$versions.coroutines_adapter"
 deps.retrofit = retrofit
+
+def moshi = [:]
+moshi.moshi = "com.squareup.moshi:moshi-kotlin:$versions.moshi"
+deps.moshi = moshi
 
 def dagger = [:]
 dagger.dagger = "com.google.dagger:dagger:$versions.dagger"
