--- a/versions.gradle
+++ b/versions.gradle
@@ -6,11 +6,11 @@ ext.deps = [:]
 def versions = [:]
 versions.lifecycle = "2.0.0-rc01"
 versions.junit = "5.1.1"
-versions.room = "2.1.0-alpha01"
+versions.room = "2.1.0-alpha03"
 versions.navigation = "1.0.0-alpha06"
 versions.espresso = "3.0.1"
 versions.mockk = "1.9"
-versions.dagger = "2.15"
+versions.dagger = "2.16"
 versions.retrofit = "2.5.0"
 versions.moshi = "1.8.0"
 versions.coroutines_adapter = "0.9.2"
@@ -39,6 +39,7 @@ deps.android = android
 def room = [:]
 room.runtime = "androidx.room:room-runtime:$versions.room"
 room.compiler = "androidx.room:room-compiler:$versions.room"
+room.testing = "androidx.room:room-testing:$versions.room"
 deps.room = room
 
 def retrofit = [:]
